Fix gateway controller deploy target
`make deploy-gateway-controller` deploys both the gateway and policy
controller but was only updating the image for the gateway controller to
the locally built version. This chnage updates the make targets to
ensure that both the gateway and policy controller images are updated
when testing the combined gateway/policy controller installation (e2e
tests).

--- a/config/deploy/local/kustomization.yaml
+++ b/config/deploy/local/kustomization.yaml
@@ -1,25 +1,11 @@
 # Local deployment overlay.
 #
-# This requires the following .env files to exist in the project directory before
-# it can be used:
-# controller-config.env
-# aws-credentials.env
+# Set the deployment imagePullPolicy to Never. This is required if you are using a local image loaded into kind i.e. make kind-load-gateway-controller
+#
 
 resources:
   - ../../default
 
-generatorOptions:
-  disableNameSuffixHash: true
-
-configMapGenerator:
-  - name: controller-config
-    envs:
-      - ../../../controller-config.env
-
-secretGenerator:
-  - name: aws-credentials
-    envs:
-      - ../../../aws-credentials.env
-
 patchesStrategicMerge:
 - manager_config_patch.yaml
+- ../../policy-controller/deploy/local/manager_config_patch.yaml
