--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,8 @@ vendor/
 
 #Ignore local directory (for stuff to keep locally)
 local/
+!config/deploy/local
+!config/policy-controller/deploy/local
 
 #Ignore .kcp directory
 .kcp/
