--- a/config/policy-controller/deploy/local/manager_config_patch.yaml
+++ b/config/policy-controller/deploy/local/manager_config_patch.yaml
@@ -1,11 +1,11 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: controller-manager
+  name: policy-controller
   namespace: system
 spec:
   template:
     spec:
       containers:
-      - name: manager
+      - name: policy-controller
         imagePullPolicy: Never
