--- a/config/policy-controller/manager/kustomization.yaml
+++ b/config/policy-controller/manager/kustomization.yaml
@@ -1,9 +1,8 @@
 
 
 resources:
-- manager.yaml
-
+  - manager.yaml
 images:
-- name: policy-controller
-  newName: quay.io/kuadrant/policy-controller
-  newTag: main
+  - name: policy-controller
+    newName: quay.io/kuadrant/policy-controller
+    newTag: release-0.2-er1
