--- a/config/add-on-manager/kustomization.yaml
+++ b/config/add-on-manager/kustomization.yaml
@@ -6,4 +6,4 @@ kind: Kustomization
 images:
   - name: addon-manager
     newName: quay.io/kuadrant/addon-manager
-    newTag: release-0.2-er1
+    newTag: release-0.2
