--- a/config/policy-controller/manager/kustomization.yaml
+++ b/config/policy-controller/manager/kustomization.yaml
@@ -1,12 +1,6 @@
 resources:
   - manager.yaml
 images:
-<<<<<<< HEAD
-- name: policy-controller
-  newName: quay.io/kuadrant/policy-controller
-  newTag: main
-=======
   - name: policy-controller
     newName: quay.io/kuadrant/policy-controller
-    newTag: release-0.2-er1
->>>>>>> 96901e6 (release-0.2-er1 image updates)
+    newTag: release-0.2
