--- a/config/policy-controller/manager/kustomization.yaml
+++ b/config/policy-controller/manager/kustomization.yaml
@@ -5,4 +5,4 @@ resources:
 images:
   - name: policy-controller
     newName: quay.io/kuadrant/policy-controller
-    newTag: release-0.2-er1
+    newTag: release-0.2
