--- a/config/policy-controller/crd/bases/kuadrant.io_dnspolicies.yaml
+++ b/config/policy-controller/crd/bases/kuadrant.io_dnspolicies.yaml
@@ -200,6 +200,7 @@ spec:
                 - name
                 type: object
             required:
+            - routingStrategy
             - targetRef
             type: object
           status:
