fix: Small fixes and test updates
Fixes a few small issues and updates the test code in prepration for future chnages.

* Removes unused code/constants
* Rename variables shadowing imports names
* Update e2e test workflow to include additional env vars:
  * TEST_DNS_PROVIDER_SECRET_NAME - Name of the secret in TEST_HUB_NAMESPACE containing the provider credentials
  * TEST_DNS_ZONE_DOMAIN_NAME - DNS Provider Zone Domain Name
  * TEST_DNS_ZONE_ID - DNS Provider Zone ID
* Update e2e test workflow to dump policty and gateway logs on failure.
* Update e2e test suite to generate a domain per test suite instance i.e. t-e2e-12345.e2e.hcpapps.net. This is required to avoid multiple test runs creating the same records in the target test zone when adding wildcard entries(*.t-e2e-12345.e2e.hcpapps.net istead of *.e2e.hcpapps.net).
* Update e2e MGC gw test to increase the time io wait for OCM gateway replication to occur

--- a/.github/workflows/ci-e2e.yaml
+++ b/.github/workflows/ci-e2e.yaml
@@ -83,6 +83,9 @@ jobs:
           export OCM_SINGLE=1
           export TEST_HUB_NAMESPACE=multi-cluster-gateways
           export TEST_HUB_KUBE_CONTEXT=kind-mgc-control-plane
+          export TEST_DNS_PROVIDER_SECRET_NAME=mgc-aws-credentials
+          export TEST_DNS_ZONE_DOMAIN_NAME=e2e.hcpapps.net
+          export TEST_DNS_ZONE_ID=Z086929132US3PB46EOLR
           export TEST_MANAGED_ZONE=${{ secrets.E2E_AWS_DNS_PUBLIC_ZONE_NAME }}
           export TEST_MANAGED_ZONE_NAME=mgc-dev-mz-aws
           make test-e2e
@@ -91,10 +94,17 @@ jobs:
           export OCM_SINGLE=1
           export TEST_HUB_NAMESPACE=multi-cluster-gateways
           export TEST_HUB_KUBE_CONTEXT=kind-mgc-control-plane
+          export TEST_DNS_PROVIDER_SECRET_NAME=mgc-gcp-credentials
+          export TEST_DNS_ZONE_DOMAIN_NAME=e2e.google.hcpapps.net
+          export TEST_DNS_ZONE_ID=e2e-google-hcpapps-net
           export TEST_MANAGED_ZONE=${{ secrets.E2E_GCP_ZONE_DNS_NAME }}
           export TEST_MANAGED_ZONE_NAME=mgc-dev-mz-gcp
           make test-e2e
-      - name: Dump MGC logs
+      - name: Dump Gateway Controller logs
         if: ${{ failure() }}
         run: |
           kubectl --context kind-mgc-control-plane logs --all-containers --ignore-errors deployment/mgc-controller-manager -n multicluster-gateway-controller-system
+      - name: Dump Policy Controller logs
+        if: ${{ failure() }}
+        run: |
+          kubectl --context kind-mgc-control-plane logs --all-containers --ignore-errors deployment/mgc-policy-controller -n multicluster-gateway-controller-system
