--- a/config/quick-start/control-cluster/cluster-config/configmap.yaml
+++ b/config/quick-start/control-cluster/cluster-config/configmap.yaml
@@ -6,7 +6,7 @@ metadata:
 data:
   params: |
     {
-      "policiesToSync": [
+      "experimentalPolicySync": [
         { "group": "kuadrant.io", "version": "v1beta1", "resource": "authpolicies" }
       ]
     }
