Add kaudrant resources to ksm permissions

--- a/config/prometheus-for-federation/ksm_clusterrole_patch.yaml
+++ b/config/prometheus-for-federation/ksm_clusterrole_patch.yaml
@@ -24,3 +24,16 @@
     verbs:
     - list
     - watch
+- op: add
+  path: /rules/-
+  value:
+    apiGroups:
+    - "kuadrant.io"
+    resources:
+    - tlspolicies
+    - dnspolicies
+    - ratelimitpolicies
+    - authpolicies
+    verbs:
+    - list
+    - watch
