--- a/config/samples/kuadrant.io_v1alpha2_dnsrecord-geo.yaml
+++ b/config/samples/kuadrant.io_v1alpha2_dnsrecord-geo.yaml
@@ -4,8 +4,7 @@ metadata:
   name: dnsrecord-geo
 spec:
   providerRef:
-    name: managedzone-sample
-    kind: ManagedZone
+    name: my-provider-creds
   endpoints:
     - dnsName: dnsrecord-geo.mn.hcpapps.net
       recordTTL: 60
