--- a/config/samples/kuadrant.io_v1alpha2_dnsrecord.yaml
+++ b/config/samples/kuadrant.io_v1alpha2_dnsrecord.yaml
@@ -4,8 +4,7 @@ metadata:
   name: dnsrecord-sample
 spec:
   providerRef:
-    name: managedzone-sample
-    kind: ManagedZone
+    name: my-provider-creds
   endpoints:
     - dnsName: dnsrecord-simple.mn.hcpapps.net
       recordTTL: 60
