e2e: Add extra logs

--- a/.github/workflows/ci-e2e.yaml
+++ b/.github/workflows/ci-e2e.yaml
@@ -105,3 +105,4 @@ jobs:
         run: |
           kubectl get deployments -A
           kubectl --context kind-mgc-control-plane logs --all-containers --ignore-errors deployment/mgc-controller-manager -n multicluster-gateway-controller-system
+          kubectl --context kind-mgc-control-plane logs --all-containers --ignore-errors deployment/dns-operator-controller-manager -n kuadrant-system
